tests/sksl/errors/ReservedNameSampler1DShadow.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'sampler1DShadow'
1 error
